eval/parser.output
Terminaux inutilisés dans la grammaire

   INTERFACE
   IMPLEMENTS


État 59 conflits: 44 décalage/réduction
État 73 conflits: 1 décalage/réduction
État 87 conflits: 1 décalage/réduction
État 123 conflits: 1 décalage/réduction
État 195 conflits: 1 décalage/réduction
État 229 conflits: 1 décalage/réduction
État 261 conflits: 1 décalage/réduction
État 280 conflits: 1 décalage/réduction


Grammaire

    0 $accept: ast $end

    1 ast: section
    2    | section ast

    3 section: stmt_list
    4        | func_def
    5        | class_def

    6 class_def: class_decl CLASS id_list LBRACE class_body RBRACE
    7          | class_decl CLASS id_list class_ext LBRACE class_body RBRACE

    8 class_ext: EXTENDS id_dot

    9 class_decl: PUBLIC
   10           | PRIVATE
   11           | %empty

   12 class_body: class_body2
   13           | %empty

   14 class_body2: class_section
   15            | class_section class_body2

   16 class_section: stmt_list
   17              | func_def
   18              | class_def

   19 id_list: ID
   20        | ID COMMA id_list

   21 id_dot: ID
   22       | ID DOT id_dot

   23 stmt_list: stmt
   24          | stmt stmt_list

   25 static_decl: STATIC
   26            | ABSTRACT
   27            | %empty

   28 function_decl: FUNCTION
   29              | VARARG

   30 func_ptr: FUNC_PTR type_decl LPAREN ID RPAREN LPAREN RPAREN
   31         | STATIC FUNC_PTR type_decl LPAREN ID RPAREN LPAREN RPAREN
   32         | FUNC_PTR type_decl LPAREN ID RPAREN LPAREN arg_list RPAREN
   33         | STATIC FUNC_PTR type_decl LPAREN ID RPAREN LPAREN arg_list RPAREN

   34 type_decl2: type_decl
   35           | type_decl array_empty

   36 arg_list: type_decl var_decl
   37         | type_decl var_decl COMMA arg_list

   38 code_segment: LBRACE RBRACE
   39             | LBRACE stmt_list RBRACE

   40 stmt: exp_stmt
   41     | loop_stmt
   42     | selection_stmt
   43     | code_segment
   44     | label_stmt
   45     | goto_stmt
   46     | switch_stmt
   47     | case_stmt
   48     | enum_stmt
   49     | jump_stmt
   50     | func_ptr
   51     | union

   52 enum_stmt: ENUM LBRACE id_list RBRACE SEMICOLON
   53          | ENUM LBRACE id_list RBRACE ID SEMICOLON

   54 label_stmt: ID COLON

   55 goto_stmt: GOTO ID SEMICOLON

   56 case_stmt: CASE primary_exp COLON
   57          | CASE postfix_exp COLON

   58 switch_stmt: SWITCH LPAREN exp RPAREN code_segment

   59 loop_stmt: WHILE LPAREN exp RPAREN stmt
   60          | DO stmt WHILE LPAREN exp RPAREN SEMICOLON
   61          | FOR LPAREN exp_stmt exp_stmt RPAREN stmt
   62          | FOR LPAREN exp_stmt exp_stmt exp RPAREN stmt
   63          | UNTIL LPAREN exp RPAREN stmt
   64          | DO stmt UNTIL LPAREN exp RPAREN SEMICOLON
   65          | LOOP LPAREN exp RPAREN stmt

   66 selection_stmt: IF LPAREN exp RPAREN stmt
   67               | IF LPAREN exp RPAREN stmt ELSE stmt

   68 jump_stmt: RETURN SEMICOLON
   69          | RETURN exp SEMICOLON
   70          | BREAK SEMICOLON
   71          | CONTINUE SEMICOLON

   72 exp_stmt: exp SEMICOLON
   73         | SEMICOLON
   74         | DOC

   75 exp: binary_exp
   76    | binary_exp COMMA exp

   77 arrow_operator: ARROW_LEFT
   78               | ARROW_RIGHT

   79 binary_exp: arrow_expression
   80           | binary_exp op arrow_expression

   81 arrow_expression: decl_exp
   82                 | arrow_expression arrow_operator decl_exp

   83 template: LTB type_list GTB

   84 op: CHUCK
   85   | UNCHUCK
   86   | ATCHUCK
   87   | PLUSCHUCK
   88   | MINUSCHUCK
   89   | TIMESCHUCK
   90   | DIVIDECHUCK
   91   | MODULOCHUCK
   92   | TRIG
   93   | UNTRIG
   94   | RSL
   95   | RSR
   96   | RSAND
   97   | RSOR
   98   | RSXOR
   99   | RAND
  100   | ROR
  101   | REQ
  102   | RNEQ
  103   | RGT
  104   | RGE
  105   | RLT
  106   | RLE
  107   | RINC
  108   | RDEC
  109   | RUNINC
  110   | RUNDEC
  111   | EQ
  112   | ASSIGN

  113 array_exp: LBRACK exp RBRACK
  114          | LBRACK exp RBRACK array_exp

  115 array_empty: LBRACK RBRACK
  116            | array_empty LBRACK RBRACK

  117 decl_exp: conditional_expression
  118         | type_decl var_decl_list
  119         | STATIC type_decl var_decl_list
  120         | PRIVATE type_decl var_decl_list
  121         | STATIC PRIVATE type_decl var_decl_list
  122         | PROTECTED type_decl var_decl_list
  123         | STATIC PROTECTED type_decl var_decl_list

  124 func_def: function_decl static_decl type_decl2 ID LPAREN RPAREN code_segment
  125         | function_decl static_decl type_decl2 ID LPAREN RPAREN SEMICOLON
  126         | function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN code_segment
  127         | AST_DTOR LPAREN RPAREN code_segment
  128         | OPERATOR type_decl ID LPAREN RPAREN code_segment
  129         | OPERATOR type_decl ID LPAREN arg_list RPAREN code_segment
  130         | TEMPLATE LTB id_list GTB function_decl static_decl type_decl2 ID LPAREN RPAREN code_segment
  131         | TEMPLATE LTB id_list GTB function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN code_segment

  132 type_decl: ID
  133          | ID ATSYM
  134          | LT id_dot GT
  135          | LT id_dot GT ATSYM

  136 decl_list: decl_exp SEMICOLON
  137          | decl_exp SEMICOLON decl_list
  138          | ID SEMICOLON
  139          | ID SEMICOLON decl_list

  140 union: UNION LBRACE decl_list RBRACE SEMICOLON

  141 var_decl_list: var_decl
  142              | var_decl COMMA var_decl_list

  143 var_decl: ID
  144         | ID array_exp
  145         | ID array_empty

  146 complex_exp: SHARPPAREN exp RPAREN

  147 polar_exp: PERCENTPAREN exp RPAREN

  148 vec_exp: ATPAREN exp RPAREN

  149 conditional_expression: logical_or_expression
  150                       | logical_or_expression QUESTION exp COLON conditional_expression

  151 logical_or_expression: logical_and_expression
  152                      | logical_or_expression OR logical_and_expression

  153 logical_and_expression: inclusive_or_expression
  154                       | logical_and_expression AND inclusive_or_expression

  155 inclusive_or_expression: exclusive_or_expression
  156                        | inclusive_or_expression S_OR exclusive_or_expression

  157 exclusive_or_expression: and_expression
  158                        | exclusive_or_expression S_XOR and_expression

  159 and_expression: equality_expression
  160               | and_expression S_AND equality_expression

  161 equality_expression: relational_expression
  162                    | equality_expression EQ relational_expression
  163                    | equality_expression NEQ relational_expression

  164 relational_expression: shift_expression
  165                      | relational_expression LT shift_expression
  166                      | relational_expression GT shift_expression
  167                      | relational_expression LE shift_expression
  168                      | relational_expression GE shift_expression

  169 shift_expression: additive_expression
  170                 | shift_expression SHIFT_LEFT additive_expression
  171                 | shift_expression SHIFT_RIGHT additive_expression

  172 additive_expression: multiplicative_expression
  173                    | additive_expression PLUS multiplicative_expression
  174                    | additive_expression MINUS multiplicative_expression

  175 multiplicative_expression: tilda_expression
  176                          | multiplicative_expression TIMES tilda_expression
  177                          | multiplicative_expression DIVIDE tilda_expression
  178                          | multiplicative_expression PERCENT tilda_expression

  179 tilda_expression: cast_exp
  180                 | tilda_expression TILDA cast_exp

  181 cast_exp: unary_expression
  182         | cast_exp DOLLAR type_decl

  183 unary_expression: dur_exp
  184                 | PLUSPLUS unary_expression
  185                 | MINUSMINUS unary_expression
  186                 | unary_operator unary_expression
  187                 | TYPEOF unary_expression
  188                 | SIZEOF unary_expression
  189                 | NEW type_decl
  190                 | NEW type_decl array_exp
  191                 | SPORK TILDA code_segment

  192 unary_operator: PLUS
  193               | MINUS
  194               | TILDA
  195               | EXCLAMATION
  196               | TIMES
  197               | SPORK TILDA

  198 dur_exp: postfix_exp
  199        | dur_exp COLONCOLON postfix_exp

  200 type_list: ID
  201          | ID COMMA type_list

  202 postfix_exp: primary_exp
  203            | postfix_exp array_exp
  204            | postfix_exp LPAREN RPAREN
  205            | postfix_exp LPAREN exp RPAREN
  206            | postfix_exp DOT ID
  207            | postfix_exp PLUSPLUS
  208            | postfix_exp MINUSMINUS
  209            | postfix_exp template LPAREN RPAREN
  210            | postfix_exp template LPAREN exp RPAREN

  211 primary_exp: ID
  212            | NUM
  213            | FLOAT
  214            | STRING_LIT
  215            | CHAR_LIT
  216            | array_exp
  217            | array_empty
  218            | complex_exp
  219            | polar_exp
  220            | vec_exp
  221            | L_HACK exp R_HACK
  222            | LPAREN exp RPAREN
  223            | LPAREN RPAREN


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
SEMICOLON (258) 52 53 55 60 64 68 69 70 71 72 73 125 136 137 138 139
    140
CHUCK (259) 84
COMMA (260) 20 37 76 142 201
ASSIGN (261) 112
DIVIDE (262) 177
TIMES (263) 176 196
PERCENT (264) 178
L_HACK (265) 221
R_HACK (266) 221
LPAREN (267) 30 31 32 33 58 59 60 61 62 63 64 65 66 67 124 125 126
    127 128 129 130 131 204 205 209 210 222 223
RPAREN (268) 30 31 32 33 58 59 60 61 62 63 64 65 66 67 124 125 126
    127 128 129 130 131 146 147 148 204 205 209 210 222 223
LBRACK (269) 113 114 115 116
RBRACK (270) 113 114 115 116
LBRACE (271) 6 7 38 39 52 53 140
RBRACE (272) 6 7 38 39 52 53 140
PLUSCHUCK (273) 87
MINUSCHUCK (274) 88
TIMESCHUCK (275) 89
DIVIDECHUCK (276) 90
MODULOCHUCK (277) 91
ATCHUCK (278) 86
UNCHUCK (279) 85
TRIG (280) 92
UNTRIG (281) 93
PERCENTPAREN (282) 147
SHARPPAREN (283) 146
PROTECTED (284) 122 123
ABSTRACT (285) 26
ATSYM (286) 133 135
FUNCTION (287) 28
DOLLAR (288) 182
TILDA (289) 180 191 194 197
QUESTION (290) 150
COLON (291) 54 56 57 150
EXCLAMATION (292) 195
IF (293) 66 67
ELSE (294) 67
WHILE (295) 59 60
DO (296) 60 64
UNTIL (297) 63 64
LOOP (298) 65
FOR (299) 61 62
GOTO (300) 55
SWITCH (301) 58
CASE (302) 56 57
ENUM (303) 52 53
RETURN (304) 68 69
BREAK (305) 70
CONTINUE (306) 71
PLUSPLUS (307) 184 207
MINUSMINUS (308) 185 208
NEW (309) 189 190
SPORK (310) 191 197
SIZEOF (311) 188
TYPEOF (312) 187
CLASS (313) 6 7
INTERFACE (314)
STATIC (315) 25 31 33 119 121 123
PRIVATE (316) 10 120 121
PUBLIC (317) 9
EXTENDS (318) 8
IMPLEMENTS (319)
DOT (320) 22 206
COLONCOLON (321) 199
AND (322) 154
EQ (323) 111 162
GE (324) 168
GT (325) 134 135 166
LE (326) 167
LT (327) 134 135 165
MINUS (328) 174 193
PLUS (329) 173 192
NEQ (330) 163
SHIFT_LEFT (331) 170
SHIFT_RIGHT (332) 171
S_AND (333) 160
S_OR (334) 156
S_XOR (335) 158
OR (336) 152
AST_DTOR (337) 127
OPERATOR (338) 128 129
FUNC_PTR (339) 30 31 32 33
RSL (340) 94
RSR (341) 95
RSAND (342) 96
RSOR (343) 97
RSXOR (344) 98
RAND (345) 99
ROR (346) 100
REQ (347) 101
RNEQ (348) 102
RGT (349) 103
RGE (350) 104
RLT (351) 105
RLE (352) 106
RINC (353) 107
RDEC (354) 108
RUNINC (355) 109
RUNDEC (356) 110
TEMPLATE (357) 130 131
NOELSE (358)
ARROW_LEFT (359) 77
ARROW_RIGHT (360) 78
LTB (361) 83 130 131
GTB (362) 83 130 131
VARARG (363) 29
UNION (364) 140
ATPAREN (365) 148
NUM (366) 212
FLOAT (367) 213
ID (368) 19 20 21 22 30 31 32 33 53 54 55 124 125 126 128 129 130 131
    132 133 138 139 143 144 145 200 201 206 211
STRING_LIT (369) 214
CHAR_LIT (370) 215
DOC (371) 74


Non-terminaux, suivis des règles où ils apparaissent

$accept (117)
    à gauche: 0
ast (118)
    à gauche: 1 2, à droite: 0 2
section (119)
    à gauche: 3 4 5, à droite: 1 2
class_def (120)
    à gauche: 6 7, à droite: 5 18
class_ext (121)
    à gauche: 8, à droite: 7
class_decl (122)
    à gauche: 9 10 11, à droite: 6 7
class_body (123)
    à gauche: 12 13, à droite: 6 7
class_body2 (124)
    à gauche: 14 15, à droite: 12 15
class_section (125)
    à gauche: 16 17 18, à droite: 14 15
id_list (126)
    à gauche: 19 20, à droite: 6 7 20 52 53 130 131
id_dot (127)
    à gauche: 21 22, à droite: 8 22 134 135
stmt_list (128)
    à gauche: 23 24, à droite: 3 16 24 39
static_decl (129)
    à gauche: 25 26 27, à droite: 124 125 126 130 131
function_decl (130)
    à gauche: 28 29, à droite: 124 125 126 130 131
func_ptr (131)
    à gauche: 30 31 32 33, à droite: 50
type_decl2 (132)
    à gauche: 34 35, à droite: 124 125 126 130 131
arg_list (133)
    à gauche: 36 37, à droite: 32 33 37 126 129 131
code_segment (134)
    à gauche: 38 39, à droite: 43 58 124 126 127 128 129 130 131
    191
stmt (135)
    à gauche: 40 41 42 43 44 45 46 47 48 49 50 51, à droite: 23 24
    59 60 61 62 63 64 65 66 67
enum_stmt (136)
    à gauche: 52 53, à droite: 48
label_stmt (137)
    à gauche: 54, à droite: 44
goto_stmt (138)
    à gauche: 55, à droite: 45
case_stmt (139)
    à gauche: 56 57, à droite: 47
switch_stmt (140)
    à gauche: 58, à droite: 46
loop_stmt (141)
    à gauche: 59 60 61 62 63 64 65, à droite: 41
selection_stmt (142)
    à gauche: 66 67, à droite: 42
jump_stmt (143)
    à gauche: 68 69 70 71, à droite: 49
exp_stmt (144)
    à gauche: 72 73 74, à droite: 40 61 62
exp (145)
    à gauche: 75 76, à droite: 58 59 60 62 63 64 65 66 67 69 72 76
    113 114 146 147 148 150 205 210 221 222
arrow_operator (146)
    à gauche: 77 78, à droite: 82
binary_exp (147)
    à gauche: 79 80, à droite: 75 76 80
arrow_expression (148)
    à gauche: 81 82, à droite: 79 80 82
template (149)
    à gauche: 83, à droite: 209 210
op (150)
    à gauche: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    101 102 103 104 105 106 107 108 109 110 111 112, à droite: 80
array_exp (151)
    à gauche: 113 114, à droite: 114 144 190 203 216
array_empty (152)
    à gauche: 115 116, à droite: 35 116 145 217
decl_exp (153)
    à gauche: 117 118 119 120 121 122 123, à droite: 81 82 136 137
func_def (154)
    à gauche: 124 125 126 127 128 129 130 131, à droite: 4 17
type_decl (155)
    à gauche: 132 133 134 135, à droite: 30 31 32 33 34 35 36 37
    118 119 120 121 122 123 128 129 182 189 190
decl_list (156)
    à gauche: 136 137 138 139, à droite: 137 139 140
union (157)
    à gauche: 140, à droite: 51
var_decl_list (158)
    à gauche: 141 142, à droite: 118 119 120 121 122 123 142
var_decl (159)
    à gauche: 143 144 145, à droite: 36 37 141 142
complex_exp (160)
    à gauche: 146, à droite: 218
polar_exp (161)
    à gauche: 147, à droite: 219
vec_exp (162)
    à gauche: 148, à droite: 220
conditional_expression (163)
    à gauche: 149 150, à droite: 117 150
logical_or_expression (164)
    à gauche: 151 152, à droite: 149 150 152
logical_and_expression (165)
    à gauche: 153 154, à droite: 151 152 154
inclusive_or_expression (166)
    à gauche: 155 156, à droite: 153 154 156
exclusive_or_expression (167)
    à gauche: 157 158, à droite: 155 156 158
and_expression (168)
    à gauche: 159 160, à droite: 157 158 160
equality_expression (169)
    à gauche: 161 162 163, à droite: 159 160 162 163
relational_expression (170)
    à gauche: 164 165 166 167 168, à droite: 161 162 163 165 166
    167 168
shift_expression (171)
    à gauche: 169 170 171, à droite: 164 165 166 167 168 170 171
additive_expression (172)
    à gauche: 172 173 174, à droite: 169 170 171 173 174
multiplicative_expression (173)
    à gauche: 175 176 177 178, à droite: 172 173 174 176 177 178
tilda_expression (174)
    à gauche: 179 180, à droite: 175 176 177 178 180
cast_exp (175)
    à gauche: 181 182, à droite: 179 180 182
unary_expression (176)
    à gauche: 183 184 185 186 187 188 189 190 191, à droite: 181
    184 185 186 187 188
unary_operator (177)
    à gauche: 192 193 194 195 196 197, à droite: 186
dur_exp (178)
    à gauche: 198 199, à droite: 183 199
type_list (179)
    à gauche: 200 201, à droite: 83 201
postfix_exp (180)
    à gauche: 202 203 204 205 206 207 208 209 210, à droite: 57 198
    199 203 204 205 206 207 208 209 210
primary_exp (181)
    à gauche: 211 212 213 214 215 216 217 218 219 220 221 222 223,
    à droite: 56 202


État 0

    0 $accept: . ast $end

    SEMICOLON     décalage et aller à l'état 1
    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    LBRACK        décalage et aller à l'état 5
    LBRACE        décalage et aller à l'état 6
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    FUNCTION      décalage et aller à l'état 10
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    IF            décalage et aller à l'état 13
    WHILE         décalage et aller à l'état 14
    DO            décalage et aller à l'état 15
    UNTIL         décalage et aller à l'état 16
    LOOP          décalage et aller à l'état 17
    FOR           décalage et aller à l'état 18
    GOTO          décalage et aller à l'état 19
    SWITCH        décalage et aller à l'état 20
    CASE          décalage et aller à l'état 21
    ENUM          décalage et aller à l'état 22
    RETURN        décalage et aller à l'état 23
    BREAK         décalage et aller à l'état 24
    CONTINUE      décalage et aller à l'état 25
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 32
    PRIVATE       décalage et aller à l'état 33
    PUBLIC        décalage et aller à l'état 34
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    AST_DTOR      décalage et aller à l'état 38
    OPERATOR      décalage et aller à l'état 39
    FUNC_PTR      décalage et aller à l'état 40
    TEMPLATE      décalage et aller à l'état 41
    VARARG        décalage et aller à l'état 42
    UNION         décalage et aller à l'état 43
    ATPAREN       décalage et aller à l'état 44
    NUM           décalage et aller à l'état 45
    FLOAT         décalage et aller à l'état 46
    ID            décalage et aller à l'état 47
    STRING_LIT    décalage et aller à l'état 48
    CHAR_LIT      décalage et aller à l'état 49
    DOC           décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 11 (class_decl)

    ast                        aller à l'état 51
    section                    aller à l'état 52
    class_def                  aller à l'état 53
    class_decl                 aller à l'état 54
    stmt_list                  aller à l'état 55
    function_decl              aller à l'état 56
    func_ptr                   aller à l'état 57
    code_segment               aller à l'état 58
    stmt                       aller à l'état 59
    enum_stmt                  aller à l'état 60
    label_stmt                 aller à l'état 61
    goto_stmt                  aller à l'état 62
    case_stmt                  aller à l'état 63
    switch_stmt                aller à l'état 64
    loop_stmt                  aller à l'état 65
    selection_stmt             aller à l'état 66
    jump_stmt                  aller à l'état 67
    exp_stmt                   aller à l'état 68
    exp                        aller à l'état 69
    binary_exp                 aller à l'état 70
    arrow_expression           aller à l'état 71
    array_exp                  aller à l'état 72
    array_empty                aller à l'état 73
    decl_exp                   aller à l'état 74
    func_def                   aller à l'état 75
    type_decl                  aller à l'état 76
    union                      aller à l'état 77
    complex_exp                aller à l'état 78
    polar_exp                  aller à l'état 79
    vec_exp                    aller à l'état 80
    conditional_expression     aller à l'état 81
    logical_or_expression      aller à l'état 82
    logical_and_expression     aller à l'état 83
    inclusive_or_expression    aller à l'état 84
    exclusive_or_expression    aller à l'état 85
    and_expression             aller à l'état 86
    equality_expression        aller à l'état 87
    relational_expression      aller à l'état 88
    shift_expression           aller à l'état 89
    additive_expression        aller à l'état 90
    multiplicative_expression  aller à l'état 91
    tilda_expression           aller à l'état 92
    cast_exp                   aller à l'état 93
    unary_expression           aller à l'état 94
    unary_operator             aller à l'état 95
    dur_exp                    aller à l'état 96
    postfix_exp                aller à l'état 97
    primary_exp                aller à l'état 98


État 1

   73 exp_stmt: SEMICOLON .

    $défaut  réduction par utilisation de la règle 73 (exp_stmt)


État 2

  196 unary_operator: TIMES .

    $défaut  réduction par utilisation de la règle 196 (unary_operator)


État 3

  221 primary_exp: L_HACK . exp R_HACK

    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    LBRACK        décalage et aller à l'état 5
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 99
    PRIVATE       décalage et aller à l'état 100
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    ATPAREN       décalage et aller à l'état 44
    NUM           décalage et aller à l'état 45
    FLOAT         décalage et aller à l'état 46
    ID            décalage et aller à l'état 101
    STRING_LIT    décalage et aller à l'état 48
    CHAR_LIT      décalage et aller à l'état 49

    exp                        aller à l'état 102
    binary_exp                 aller à l'état 70
    arrow_expression           aller à l'état 71
    array_exp                  aller à l'état 72
    array_empty                aller à l'état 73
    decl_exp                   aller à l'état 74
    type_decl                  aller à l'état 76
    complex_exp                aller à l'état 78
    polar_exp                  aller à l'état 79
    vec_exp                    aller à l'état 80
    conditional_expression     aller à l'état 81
    logical_or_expression      aller à l'état 82
    logical_and_expression     aller à l'état 83
    inclusive_or_expression    aller à l'état 84
    exclusive_or_expression    aller à l'état 85
    and_expression             aller à l'état 86
    equality_expression        aller à l'état 87
    relational_expression      aller à l'état 88
    shift_expression           aller à l'état 89
    additive_expression        aller à l'état 90
    multiplicative_expression  aller à l'état 91
    tilda_expression           aller à l'état 92
    cast_exp                   aller à l'état 93
    unary_expression           aller à l'état 94
    unary_operator             aller à l'état 95
    dur_exp                    aller à l'état 96
    postfix_exp                aller à l'état 97
    primary_exp                aller à l'état 98


État 4

  222 primary_exp: LPAREN . exp RPAREN
  223            | LPAREN . RPAREN

    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    RPAREN        décalage et aller à l'état 103
    LBRACK        décalage et aller à l'état 5
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 99
    PRIVATE       décalage et aller à l'état 100
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    ATPAREN       décalage et aller à l'état 44
    NUM           décalage et aller à l'état 45
    FLOAT         décalage et aller à l'état 46
    ID            décalage et aller à l'état 101
    STRING_LIT    décalage et aller à l'état 48
    CHAR_LIT      décalage et aller à l'état 49

    exp                        aller à l'état 104
    binary_exp                 aller à l'état 70
    arrow_expression           aller à l'état 71
    array_exp                  aller à l'état 72
    array_empty                aller à l'état 73
    decl_exp                   aller à l'état 74
    type_decl                  aller à l'état 76
    complex_exp                aller à l'état 78
    polar_exp                  aller à l'état 79
    vec_exp                    aller à l'état 80
    conditional_expression     aller à l'état 81
    logical_or_expression      aller à l'état 82
    logical_and_expression     aller à l'état 83
    inclusive_or_expression    aller à l'état 84
    exclusive_or_expression    aller à l'état 85
    and_expression             aller à l'état 86
    equality_expression        aller à l'état 87
    relational_expression      aller à l'état 88
    shift_expression           aller à l'état 89
    additive_expression        aller à l'état 90
    multiplicative_expression  aller à l'état 91
    tilda_expression           aller à l'état 92
    cast_exp                   aller à l'état 93
    unary_expression           aller à l'état 94
    unary_operator             aller à l'état 95
    dur_exp                    aller à l'état 96
    postfix_exp                aller à l'état 97
    primary_exp                aller à l'état 98


État 5

  113 array_exp: LBRACK . exp RBRACK
  114          | LBRACK . exp RBRACK array_exp
  115 array_empty: LBRACK . RBRACK

    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    LBRACK        décalage et aller à l'état 5
    RBRACK        décalage et aller à l'état 105
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 99
    PRIVATE       décalage et aller à l'état 100
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    ATPAREN       décalage et aller à l'état 44
    NUM           décalage et aller à l'état 45
    FLOAT         décalage et aller à l'état 46
    ID            décalage et aller à l'état 101
    STRING_LIT    décalage et aller à l'état 48
    CHAR_LIT      décalage et aller à l'état 49

    exp                        aller à l'état 106
    binary_exp                 aller à l'état 70
    arrow_expression           aller à l'état 71
    array_exp                  aller à l'état 72
    array_empty                aller à l'état 73
    decl_exp                   aller à l'état 74
    type_decl                  aller à l'état 76
    complex_exp                aller à l'état 78
    polar_exp                  aller à l'état 79
    vec_exp                    aller à l'état 80
    conditional_expression     aller à l'état 81
    logical_or_expression      aller à l'état 82
    logical_and_expression     aller à l'état 83
    inclusive_or_expression    aller à l'état 84
    exclusive_or_expression    aller à l'état 85
    and_expression             aller à l'état 86
    equality_expression        aller à l'état 87
    relational_expression      aller à l'état 88
    shift_expression           aller à l'état 89
    additive_expression        aller à l'état 90
    multiplicative_expression  aller à l'état 91
    tilda_expression           aller à l'état 92
    cast_exp                   aller à l'état 93
    unary_expression           aller à l'état 94
    unary_operator             aller à l'état 95
    dur_exp                    aller à l'état 96
    postfix_exp                aller à l'état 97
    primary_exp                aller à l'état 98


État 6

   38 code_segment: LBRACE . RBRACE
   39             | LBRACE . stmt_list RBRACE

    SEMICOLON     décalage et aller à l'état 1
    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    LBRACK        décalage et aller à l'état 5
    LBRACE        décalage et aller à l'état 6
    RBRACE        décalage et aller à l'état 107
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    IF            décalage et aller à l'état 13
    WHILE         décalage et aller à l'état 14
    DO            décalage et aller à l'état 15
    UNTIL         décalage et aller à l'état 16
    LOOP          décalage et aller à l'état 17
    FOR           décalage et aller à l'état 18
    GOTO          décalage et aller à l'état 19
    SWITCH        décalage et aller à l'état 20
    CASE          décalage et aller à l'état 21
    ENUM          décalage et aller à l'état 22
    RETURN        décalage et aller à l'état 23
    BREAK         décalage et aller à l'état 24
    CONTINUE      décalage et aller à l'état 25
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 32
    PRIVATE       décalage et aller à l'état 100
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    FUNC_PTR      décalage et aller à l'état 40
    UNION         décalage et aller à l'état 43
    ATPAREN       décalage et aller à l'état 44
    NUM           décalage et aller à l'état 45
    FLOAT         décalage et aller à l'état 46
    ID            décalage et aller à l'état 47
    STRING_LIT    décalage et aller à l'état 48
    CHAR_LIT      décalage et aller à l'état 49
    DOC           décalage et aller à l'état 50

    stmt_list                  aller à l'état 108
    func_ptr                   aller à l'état 57
    code_segment               aller à l'état 58
    stmt                       aller à l'état 59
    enum_stmt                  aller à l'état 60
    label_stmt                 aller à l'état 61
    goto_stmt                  aller à l'état 62
    case_stmt                  aller à l'état 63
    switch_stmt                aller à l'état 64
    loop_stmt                  aller à l'état 65
    selection_stmt             aller à l'état 66
    jump_stmt                  aller à l'état 67
    exp_stmt                   aller à l'état 68
    exp                        aller à l'état 69
    binary_exp                 aller à l'état 70
    arrow_expression           aller à l'état 71
    array_exp                  aller à l'état 72
    array_empty                aller à l'état 73
    decl_exp                   aller à l'état 74
    type_decl                  aller à l'état 76
    union                      aller à l'état 77
    complex_exp                aller à l'état 78
    polar_exp                  aller à l'état 79
    vec_exp                    aller à l'état 80
    conditional_expression     aller à l'état 81
    logical_or_expression      aller à l'état 82
    logical_and_expression     aller à l'état 83
    inclusive_or_expression    aller à l'état 84
    exclusive_or_expression    aller à l'état 85
    and_expression             aller à l'état 86
    equality_expression        aller à l'état 87
    relational_expression      aller à l'état 88
    shift_expression           aller à l'état 89
    additive_expression        aller à l'état 90
    multiplicative_expression  aller à l'état 91
    tilda_expression           aller à l'état 92
    cast_exp                   aller à l'état 93
    unary_expression           aller à l'état 94
    unary_operator             aller à l'état 95
    dur_exp                    aller à l'état 96
    postfix_exp                aller à l'état 97
    primary_exp                aller à l'état 98


État 7

  147 polar_exp: PERCENTPAREN . exp RPAREN
